Fixed margins on container
Container is no longer 600px too high up when on normal screen

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -26,7 +26,7 @@ nav{
 }
 .container{
   height:100%;
-  margin-bottom:300px;
+  margin-bottom:50px;
 }
 .nav-link{
   font-size:1.5rem;
